Fix passive abilities failing on empty armour slots